[tool.poetry]
name = "robot-adventure"
version = "0.1.0"
description = ""
authors = ["Sakhile Ndlazi <sandlazjhb024@student.wethinkcode.co.za>"]
readme = "README.md"
packages = [
    { include = "robot" }
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
